2006-03-22 François Proulx <francois.proulx@gmail.com>
	* Fixed Google Maps URLs bug
	* Since Google Maps does not provide Javascript over SSL (it does but the certificate does not match)
	  the code path to the map does not use SSL, but the outgoing URLs do.
	* Removed lost echo in Locale.php
	
2006-03-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* login/index.php: Remove huge security hole introduced by stylistic changes in the file.  
	A user could login to any hotspot by simply filling a blank form because of a gratuitous 
	change from empty to is_null everywhere.  Remove escaping or REQUEST parameters in non SQL
	 related code, as this would lead to double unescaping down the line.  Remove logic dependent
	  on encapsulated side effects of object method call.

2006-03-19 François Proulx <francois.proulx@gmail.com>
	* Updated French translations
	
2006-03-18 Rob Janes <janes.rob@gmail.com>
	* path_defines_base working for combinations of DocumentRoot, Alias,
	  and installed wifidog-auth directory, correctly setting SYSTEM_PATH
	  and WIFIDOG_ABS_FILE_PATH dynamically.
	* classes/Locale.php::getBestLanguage changed to correctly parse
	  HTTP_ACCEPT_LANGUAGE, comma is the correct delimiter not semi-colon.
	  Ignores SESS_LANGUAGE_VAR if invalid.

2006-03-18 Rob Janes <janes.rob@gmail.com>
	* Fixed bug #77 classes/EventLogging.php non-variable pass by reference

2006-03-16 François Proulx <francois.proulx@gmail.com>
	* Removed stale owner_sendfiles.php (now integrated in the Content Manager)
	* Cleaned up a bunch of stale TODOs
	
2006-03-16 Max Horváth <max.horvath@maxspot.de>
	* updated language files (new german strings have already been translated)
	* added LDAP authentication
	* Dependencies class can check for an PHP extension now
	* Dependencies class can check for multiple files on a single dependency now
	* Authentication classes moved to it's own directory
	* The getAuthenticator method now uses the much safer and faster