@@ -1,3 +1,8 @@
+2006-03-26 Benoit Grégoire  <bock@step.polymtl.ca>
+	* init_php.php: Fix stripslashes_cb() so it actually works, this means the aust server should work properly with auth servers with magic quotes turned on.
+	This is still not recommended however.
+	* Remove some spurious error ouptut on logout.
+
 2006-03-22 François Proulx <francois.proulx@gmail.com>
 	* Fixed Google Maps URLs bug
 	* Since Google Maps does not provide Javascript over SSL (it does but the certificate does not match)
